--- a/src/Components/AddNewTransaction/AddNewTransaction.css
+++ b/src/Components/AddNewTransaction/AddNewTransaction.css
@@ -23,7 +23,6 @@ form {
   }
   
   input[type="number"],
-  input[type="text"],
   input[type="date"] {
     padding: 10px;
     border: 1px solid #ccc;
@@ -35,7 +34,6 @@ form {
   }
   
   input[type="number"]:focus,
-  input[type="text"]:focus,
   input[type="date"]:focus {
     border-color: #007bff;
     outline: none;
@@ -62,9 +60,39 @@ form {
   button[type="submit"]:focus {
     outline: none;
   }
-  
-  @media (max-width: 500px) {
-    form {
-      width: 90%;
-    }
+  select {
+    padding: 10px;
+    border: 1px solid #ccc;
+    border-radius: 3px;
+    font-size: 16px;
+    width: 100%;
+    box-sizing: border-box;
+    appearance: none;
+    -webkit-appearance: none;
+    -moz-appearance: none;
+    background: url("data:image/svg+xml;utf8,<svg xmlns='http://www.w3.org/2000/svg' width='16' height='16' fill='currentColor' class='bi bi-chevron-down' viewBox='0 0 16 16'><path fill-rule='evenodd' d='M1.646 4.646a.5.5 0 0 1 .708 0L8 10.293l5.646-5.647a.5.5 0 0 1 .708.708l-6 6a.5.5 0 0 1-.708 0l-6-6a.5.5 0 0 1 0-.708z'/></svg>") no-repeat right 10px center;
+    padding-right: 30px;
+    transition: border-color 0.3s ease;
   }
+  
+  select:focus {
+    border-color: #007bff;
+    outline: none;
+    box-shadow: 0 0 5px rgba(0, 123, 255, 0.2);
+  }
+  
+  select option {
+      font-size: 16px;
+      padding: 5px;
+  }
+  
+  select:invalid {
+    border-color: #ccc;
+  }
+  
+  label[for="transactionDescription"] {
+    font-weight: 500;
+    margin-bottom: 5px;
+    color: #555;
+  }
+  
