--- a/src/Components/AllTransactionComponent/AllTransactionComponent.css
+++ b/src/Components/AllTransactionComponent/AllTransactionComponent.css
@@ -1,16 +1,18 @@
 
 body{
     background-color: rgb(246, 244, 244);
+    
 }
 
 .transactions{
     display: flex;
     justify-content: center;
- 
+    height: 100vh;
 }
 
 .transaction-list-holder{
     padding: 10px;
     width: 70%;
+    overflow-y: scroll;
 }
 
