--- a/src/Components/DashboardComponent/DashboardComponent.css
+++ b/src/Components/DashboardComponent/DashboardComponent.css
@@ -4,7 +4,7 @@
     flex-direction: column;
     align-items: center;
     gap: 20px;
-    overflow:scroll;
+    width: 100vw;
 }
 .total-container {
   display: flex;
