--- a/src/Components/TransactionComponent/TransactionComponent.css
+++ b/src/Components/TransactionComponent/TransactionComponent.css
@@ -36,9 +36,78 @@
     color: black;
     background-color: rgb(255, 167, 167);
 }
-.edit:hover,.delete:hover{
-    background-color: rgb(244, 244, 244);
+.edit:hover{
+    background-color: yellow;
 }
+.delete:hover{
+    background-color: red;
+    border: red;
+}
+.container {
+    background-color: #f7fafc;
+    border: 2px solid #d1d5db;
+    padding: 24px;
+    border-radius: 12px;
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+    max-width: 32rem;
+    margin: 0 auto;
+  }
+  
+  .form-group {
+    margin-bottom: 16px;
+  }
+  
+  .form-group label {
+    display: block;
+    font-size: 0.875rem;
+    font-weight: 500;
+    color: #4a5568;
+    margin-bottom: 8px;
+  }
+  
+  .form-input,
+  .form-select {
+    width: 100%;
+    padding: 8px 12px;
+    border: 1px solid #d1d5db;
+    border-radius: 6px;
+    box-shadow: 0 1px 2px rgba(0, 0, 0, 0.1);
+    outline: none;
+    transition: border-color 0.3s ease, box-shadow 0.3s ease;
+  }
+  
+  .form-input:focus,
+  .form-select:focus {
+    border-color: #3b82f6;
+    box-shadow: 0 0 0 2px rgba(59, 130, 246, 0.5);
+  }
+  
+  .form-button {
+    width: 100%;
+    background-color: #3b82f6;
+    color: white;
+    font-weight: 500;
+    padding: 8px 16px;
+    border-radius: 8px;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+    border: none;
+    cursor: pointer;
+    transition: background-color 0.3s ease;
+  }
+  
+  .form-button:hover {
+    background-color: #2563eb;
+  }
+  
+  .form-button:focus {
+    outline: none;
+    box-shadow: 0 0 0 2px rgba(59, 130, 246, 0.5);
+  }
+  
+  .form-button:focus-visible {
+    background-color: #3b82f6;
+  }
+  
 
 @media (max-width: 768px) {
     .transaction-detail-box{
